--- a/viredroid/src/main/AndroidManifest.xml
+++ b/viredroid/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.google.vrtoolkit.cardboard.samples.treasurehunt" >
+          package="org.viredroid.cardboard" >
 
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.VIBRATE" />
